task(#49): CSS/timer.css: fix navbar z-index
With the default z-index, it is behind the timer which can prevent links from working

--- a/Flask/static/CSS/timer.css
+++ b/Flask/static/CSS/timer.css
@@ -64,3 +64,8 @@ body {
   flex-direction: column;
   justify-content: flex-end;
 }
+
+/* Bootstrap fixes */
+.navbar {
+  z-index: 100;
+}
